# rust

./: .gitignore
hello_rust/: Cargo.toml
hello_rust/src/: hello.rs  main.rs
odoo-automation/: Cargo.toml
odoo-automation/src/: main.rs
pusher/: Cargo.toml  projects.txt
pusher/src/: main.rs
rust-learning-app/: Cargo.toml
rust-learning-app/src/: main.rs
rust-learning-app/src/lessons/: control_flow.rs  data_types.rs  functions.rs  ownership.rs  structs.rs  variables.rs
shy/: Cargo.toml
shy/src/: main.rs
tailwind-components/: Cargo.toml
tailwind-components/src/: main.rs
